I'm way too self-conscious about working on GIANT SLIDES on a plane, so I am going to stop now.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,16 @@ window.onload = function() {
 </script></head><body>
 <div>A Brief History Of <em>Mesh Networking</em></div>
 <div>John Fink, Digital Scholarship Librarian, McMaster University</div>
+<div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
 <div>[network image here]</div>
 <div>What is <em>mesh networking</em></div>
+<div>[mesh network image here]</div>
+<div>[amateur radio?]</div>
+<div><em>Why</em> is mesh networking important</em></div>
+<div>The Archive Sense-O-Matic</div>
 
 
+
+
+<div>Any questions?</div>
