--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ window.onload = function() {
 <div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
 <div>[network image here]</div>
+<div><img src="images/Star_Topology.png"></img></div>
+<div><img src="images/mesh-network.jpg"></img></div>
 <div>What is <em>mesh networking</em></div>
 <div>[mesh network image here]</div>
 <div>[amateur radio?]</div>
