--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@ window.onload = function() {
 <div>John Fink, Digital Scholarship Librarian, McMaster University</div>
 <div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
-<div>[network image here]</div>
 <div><img src="images/Star_Topology2.png"></img></div>
+<div>What is <em>Mesh</em> networking?</div>
 <div><img src="images/mesh-network2.jpg"></img></div>
-<div>What is <em>mesh networking</em></div>
-<div>[mesh network image here]</div>
+<div><img src="images/aprs-ss.png"></img></div>
 <div>[amateur radio?]</div>
 <div><em>Why</em> is mesh networking important</em></div>
 <div>The Archive Sense-O-Matic</div>
