--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ window.onload = function() {
 <div>[amateur radio?]</div>
 <div><em>Why</em> is mesh networking important</em></div>
 <div>The Archive Sense-O-Matic</div>
-
+<div><img src="images/raspi.jpg" /></div>
 
 
 
