--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ window.onload = function() {
 };
 </script></head><body>
 <div>A Brief History Of <em>Mesh Networking</em></div>
-<div>John Fink, Digital Scholarship Librarian, McMaster University</div>
+<div>John Fink, VA3PDP, Digital Scholarship Librarian, McMaster University</div>
 <div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
 <div><img src="images/Star_Topology2.png"></img></div>
