--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ window.onload = function() {
 <div><img src="images/Star_Topology2.png"></img></div>
 <div>What is <em>Mesh</em> networking?</div>
 <div><img src="images/mesh-network2.jpg"></img></div>
+<div><img src="images/mesh-potato.jpg" /></div>
 <div><img src="images/aprs-ss.png"></img></div>
 <div>[amateur radio?]</div>
 <div><em>Why</em> is mesh networking important</em></div>
