--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ window.onload = function() {
 <div>John Fink, VA3PDP, Digital Scholarship Librarian, McMaster University</div>
 <div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
+<div><img src="images/10base2_cable.png"></img></div>
 <div><img src="images/rj45.jpg" /></div>
 <div><img src="images/Star_Topology2.png"></img></div>
 <div>What is <em>Mesh</em> networking?</div>
