--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ window.onload = function() {
 <div><img src="images/mesh-potato.jpg" /></div>
 <div><img src="images/aprs-ss.png"></img></div>
 <div><em>Why</em> is mesh networking important</em></div>
-<div>The Archive Sense-O-Matic</div>
+<div><img src="images/archives.jpg"></img></div>
+<div>The Archive Sense-O-Matic!</div>
 <div><img src="images/raspi.jpg" /></div>
 
 
