Go away slide. Gotta have go away slide.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ window.onload = function() {
 </script></head><body>
 <div>A Brief History Of <em>Mesh Networking</em></div>
 <div>John Fink, VA3PDP, Digital Scholarship Librarian, McMaster University</div>
+<div><em>GO AWAY</em></div>
 <div><em>interrupt me!</em></div>
 <div>What is <em>Networking?</em></div>
 <div><img src="images/10base2_cable.png"></img></div>
